# bountyops-croo

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agents/: designer_agent.py
data/: opportunities.sample.json
demo/: bountyops_output.json  bountyops_report.html  make_report.py
docs/: CAP_INTEGRATION.md  DEMO_SCRIPT.md  DORAHACKS_WRITEUP.md  ROADMAP.md  WHY_BOUNTYOPS_EN.md  WHY_BOUNTYOPS_FR.md
examples/: bountyops_output.json  croo_input.json
scripts/: croo_provider_worker.py  croo_requester_test.py
src/bountyops/: app.py  cap_adapter.py  cli.py  ledger.py  models.py  opportunity_scout.py  orchestrator.py  project_designer.py  roi_scorer.py  submission_writer.py  utils.py  verifier.py
tests/: test_api.py  test_orchestrator.py
