[project]
name = "bountyops-croo"
version = "0.1.0"
description = "Autonomous bounty intelligence and submission procurement agent for CROO/CAP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BountyOps Contributors" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dateutil>=2.9.0",
  "httpx>=0.27.0"
]

[project.scripts]
bountyops = "bountyops.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "agents"]
